evidence_library/EC2/regions/ap-northeast-3/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-01452f93aaeb2dd9b",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0f882c4776e30aa69",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-3:111111111111:security-group/sg-01452f93aaeb2dd9b",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-01452f93aaeb2dd9b"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "eb010dce-95da-4498-9745-c585dc37a1d0",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "eb010dce-95da-4498-9745-c585dc37a1d0",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "965",
            "date": "Fri, 06 Feb 2026 16:25:12 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
